src/objects/inscor__RO_Off_Unit__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Condition_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Condition Code</label>
        <referenceTo>inscor__Condition_Code__c</referenceTo>
        <relationshipLabel>RO Off Units</relationshipLabel>
        <relationshipName>RO_Off_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__ESN__c</fullName>
        <label>ESN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory</label>
        <referenceTo>inscor__Inventory_Line__c</referenceTo>
        <relationshipLabel>RO Off Units</relationshipLabel>
        <relationshipName>RO_Off_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>inscor__Inventory_Location__c</referenceTo>
        <relationshipLabel>RO Off Units</relationshipLabel>
        <relationshipName>RO_Off_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Manifest_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manifest Line</label>
        <referenceTo>inscor__Manifest_Line__c</referenceTo>
        <relationshipLabel>RO Off Units</relationshipLabel>
        <relationshipName>RO_Off_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Manifest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manifest</label>
        <referenceTo>inscor__Manifest__c</referenceTo>
        <relationshipLabel>RO Off Units</relationshipLabel>
        <relationshipName>RO_Off_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Owner_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Code</label>
        <referenceTo>inscor__Owner_Code__c</referenceTo>
        <relationshipLabel>RO Off Units</relationshipLabel>
        <relationshipName>RO_Off_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Part_Master__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Part Master</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>RO Off Units</relationshipLabel>
        <relationshipName>RO_Off_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Accepted__c</fullName>
        <label>Quantity Accepted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Received__c</fullName>
        <label>Quantity Received</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Quantity_Rejected__c</fullName>
        <label>Quantity Rejected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Receipt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Receipt</label>
        <referenceTo>inscor__Receipt__c</referenceTo>
        <relationshipLabel>RO Off Units</relationshipLabel>
        <relationshipName>RO_Off_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Repair_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repair Order Line</label>
        <referenceTo>inscor__Repair_Order_Line__c</referenceTo>
        <relationshipLabel>RO Off Units</relationshipLabel>
        <relationshipName>RO_Off_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Repair_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Repair Order</label>
        <referenceTo>inscor__Repair_Order__c</referenceTo>
        <relationshipLabel>RO Off Units</relationshipLabel>
        <relationshipName>RO_Off_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RO Off Units (Source)</relationshipLabel>
        <relationshipName>RO_Off_Units1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Trace__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trace</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>RO Off Units</relationshipLabel>
        <relationshipName>RO_Off_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse</label>
        <referenceTo>inscor__Warehouse__c</referenceTo>
        <relationshipLabel>RO Off Units</relationshipLabel>
        <relationshipName>RO_Off_Units</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RO Off Unit</label>
    <nameField>
        <displayFormat>ROU-{0}</displayFormat>
        <label>RO Off Unit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RO Off Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>